[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nis2-compliance-mcp"
version = "1.3.1"
description = "NIS2 Directive (EU 2022/2555) compliance for AI agents. 10 Article 21 risk-management measures audit, Article 23 incident classification, Article 20 management-body accountability. For the 18 essential/important entity sectors. By MEOK AI Labs."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["mcp", "nis2", "nis2-directive", "eu-cybersecurity", "cyber-compliance", "essential-entity", "important-entity", "article-21", "article-23", "meok-ai-labs", "eu-regulation", "enisa", "csirt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai/nis2-compliance-mcp"
Repository = "https://github.com/CSOAI-ORG/nis2-compliance-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
nis2-compliance-mcp = "server:main"
